force-app/main/default/objects/jimObject__c/jimObject__c.object-meta.xml
<CustomObject>
    <label>jimObject</label>
    <nameField>
        <label>Nama</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>jimObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>