force-app/main/default/objects/jimObject__c/fields/Agama__c.field-meta.xml
<CustomField>
    <fullName>Agama__c</fullName>
    <label>Agama</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kristen</fullName>
            </value>
            <value>
                <fullName>Islam</fullName>
            </value>
            <value>
                <fullName>Budha</fullName>
            </value>
            <value>
                <fullName>Hindu</fullName>
            </value>
            <value>
                <fullName>Khatolik</fullName>
            </value>
            <value>
                <fullName>Kepercayaan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>