force-app/main/default/objects/jimObject__c/fields/Alamat__c.field-meta.xml
<CustomField>
    <fullName>Alamat__c</fullName>
    <label>Alamat</label>
    <type>TextArea</type>
</CustomField>