force-app/main/default/objects/jimObject__c/fields/Gaji__c.field-meta.xml
<CustomField>
    <fullName>Gaji__c</fullName>
    <label>Gaji</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>