force-app/main/default/objects/jimObject__c/fields/Hape__c.field-meta.xml
<CustomField>
    <fullName>Hape__c</fullName>
    <label>Hape</label>
    <type>Phone</type>
</CustomField>