force-app/main/default/objects/jimObject__c/fields/Hobi__c.field-meta.xml
<CustomField>
    <fullName>Hobi__c</fullName>
    <label>Hobi</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Membaca</fullName>
            </value>
            <value>
                <fullName>Menulis</fullName>
            </value>
            <value>
                <fullName>Melukis</fullName>
            </value>
            <value>
                <fullName>Olah raga</fullName>
            </value>
            <value>
                <fullName>Renang</fullName>
            </value>
            <value>
                <fullName>Catur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>