force-app/main/default/objects/jimObject__c/fields/Jam_Available__c.field-meta.xml
<CustomField>
    <fullName>Jam_Available__c</fullName>
    <label>Jam Available</label>
    <type>Time</type>
</CustomField>