force-app/main/default/objects/jimObject__c/fields/Kartu_Kredit__c.field-meta.xml
<CustomField>
    <fullName>Kartu_Kredit__c</fullName>
    <label>Kartu Kredit</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>creditCard</maskType>
    <type>EncryptedText</type>
</CustomField>