force-app/main/default/objects/jimObject__c/fields/Lokasi__c.field-meta.xml
<CustomField>
    <fullName>Lokasi__c</fullName>
    <label>Lokasi</label>
    <scale>0</scale>
    <type>Location</type>
</CustomField>