force-app/main/default/objects/jimObject__c/fields/Tentang_Saya__c.field-meta.xml
<CustomField>
    <fullName>Tentang_Saya__c</fullName>
    <label>Tentang Saya</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>