force-app/main/default/objects/jimObject__c/fields/Tgl_Gabung__c.field-meta.xml
<CustomField>
    <fullName>Tgl_Gabung__c</fullName>
    <label>Tgl Gabung</label>
    <type>DateTime</type>
</CustomField>