force-app/main/default/objects/jimObject__c/fields/Ukuran_Sepatu__c.field-meta.xml
<CustomField>
    <fullName>Ukuran_Sepatu__c</fullName>
    <label>Ukuran Sepatu</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>